# ormx

./: Cargo.toml  README.md
.github/workflows/: examples.yml
example-mariadb/: Cargo.toml
example-mariadb/src/: main.rs
example-mysql/src/: main.rs
example-postgres/: Cargo.toml
example-postgres/migrations/: 20240908062042_schema.sql
example-postgres/src/: main.rs  query2.rs
ormx/: Cargo.toml
ormx-macros/: Cargo.toml
ormx-macros/src/: attrs.rs  lib.rs  utils.rs
ormx-macros/src/backend/: mod.rs
ormx-macros/src/backend/common/: mod.rs  table.rs
ormx-macros/src/backend/mariadb/: insert.rs  mod.rs
ormx-macros/src/backend/mysql/: insert.rs  mod.rs
ormx-macros/src/backend/postgres/: mod.rs
ormx-macros/src/patch/: parse.rs
ormx-macros/src/table/: mod.rs  parse.rs
ormx/src/: lib.rs
ormx/src/query2/: map.rs  mod.rs
scripts/: mysql.sh  postgres.sh
