[package]
name = "example-postgres"
version = "0.1.0"
authors = ["moritz"]
edition = "2021"

[dependencies]
ormx = { path = "../ormx", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenv = "0.15"
chrono = "0.4"
env_logger = "0.11.5"
log = "0.4"
futures-util = "0.3"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["macros", "postgres", "runtime-tokio-rustls", "chrono"]
