[package]
name = "ormx-macros"
version = "0.11.0"
authors = ["moritz"]
edition = "2021"
description = "lightweight procedural macros bringing orm-like features to sqlx"
homepage = "https://github.com/NyxCode/ormx"
license = "MIT"

[lib]
proc-macro = true

[features]
sqlite = []
mysql = []
mariadb = []
postgres = []

[dependencies]
itertools = "0.13.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
once_cell = "1"
proc-macro-error = "1"
